feat: create new endpoint /api/v1/me whos function to display detail user based on the token
