# routes/api.php
@@ -15,6 +15,8 @@ Route::prefix('v1')->group(function () {
     Route::post('login', [AuthController::class, 'login']);
 });
 
+Route::middleware('auth:sanctum')->get('/v1/me', [AuthController::class, 'me']);
+
 Route::middleware('auth:sanctum')->prefix('v1')->group(function () {
     Route::get('/posts', [PostController::class, 'index']);
     Route::post('/posts', [PostController::class, 'store']);
